--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,20 @@ name: Generate Snake Contribution
 
 on:
   schedule:
-    # Runs every 6 hours
     - cron: "0 */6 * * *"
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+permissions:
+  contents: write  # Esto es esencial para permitir el push
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Necesario para el historial completo de Git
 
       - uses: Platane/snk@v3
         with:
@@ -24,8 +27,11 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add dist/
           git commit -m "Update snake contribution" || echo "No changes to commit"
           git push
+        env:
+          # Usamos el token especial de GitHub
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
