--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Update Snake Contribution
 
 on:
   schedule:
-    - cron: "0 */6 * * *"  # Cada 6 horas
-  workflow_dispatch:       # Ejecución manual
+    - cron: "0 */6 * * *"
+  workflow_dispatch:
 
 permissions:
-  contents: write         # Permiso esencial para hacer push
+  contents: write
 
 jobs:
   generate-snake:
@@ -16,27 +16,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Necesario para el historial completo
+          fetch-depth: 0
 
       - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: augvstTTY
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            github-snake.svg  # Cambiado a raíz para simplificar
+            github-snake-dark.svg?palette=github-dark
+            snake.gif?color_snake=orange
 
-      - name: Commit & Push Changes
+      - name: Commit and Push Changes
         run: |
-          # Configuración de Git
-          git config user.name "github-actions"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          # Configuración Git
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
           
-          # Sincroniza cambios y hace push seguro
-          git add dist/
-          git pull --rebase origin main
+          # Asegurar que tenemos los últimos cambios
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git fetch origin
+          git reset --hard origin/main
+          
+          # Commit y push
+          git add *.svg *.gif
           git commit -m "Update snake contribution [skip ci]" || echo "No changes to commit"
           git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
