Modify GitHub Actions workflow for SVG outputs
Updated the output path for the dark snake SVG and added a color parameter.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
           github_user_name: ${{ env.GITHUB_USER }}
           outputs: |
             ./github-snake.svg
-            ./github-snake-dark.svg?palette=github-dark
+            ./github-snake-dark.svg?palette=github-dark&color_snake=#DC0000 
             ./snake.gif?color_snake=orange
 
-      # 3. Commit y push de cambios (solo si hay cambios reales)
+      # 3. Commit y push de cambios (solo si hay cambios reales) ./github-snake-dark.svg?palette=github-dark
       - name: Commit and Push Changes
         run: |
           git config user.name "GitHub Actions"
