--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,14 @@ jobs:
             ./github-snake-dark.svg?palette=github-dark&color_snake=#DC0000 
             ./snake.gif?color_snake=orange
 
-      # 3. Commit y push de cambios (solo si hay cambios reales) ./github-snake-dark.svg?palette=github-dark
+      # 3. Commit y push de cambios (solo si hay cambios reales)
       - name: Commit and Push Changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
+
+          # ↓↓↓↓ AÑADE ESTA LÍNEA CRUCIAL ↓↓↓↓
+          git pull origin ${{ env.TARGET_BRANCH }} --rebase
 
           git add *.svg *.gif
           if git diff --cached --quiet; then
@@ -47,4 +50,3 @@ jobs:
 
           git commit -m "chore: update snake contribution [skip ci]"
           git push origin ${{ env.TARGET_BRANCH }}
-
