--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Necesario para acceder al historial completo
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ env.TARGET_BRANCH }}
 
       # 2. Generar las imágenes de la serpiente
       - name: Generate Snake Images
@@ -30,14 +32,18 @@ jobs:
           github_user_name: ${{ env.GITHUB_USER }}
           outputs: |
             ./github-snake.svg
-            ./github-snake-dark.svg?palette=github-dark 
+            ./github-snake-dark.svg?palette=github-dark&color_snake=#DC0000 
             ./snake.gif?color_snake=orange
 
-      # 3. Commit y push de cambios (solo si hay cambios reales) 
+      # 3. Commit y push de cambios (solo si hay cambios reales)
       - name: Commit and Push Changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
+
+          # Actualizar con la rama remota
+          git fetch origin
+          git reset --hard origin/${{ env.TARGET_BRANCH }}
 
           git add *.svg *.gif
           if git diff --cached --quiet; then
@@ -46,4 +52,4 @@ jobs:
           fi
 
           git commit -m "chore: update snake contribution [skip ci]"
-          git push origin ${{ env.TARGET_BRANCH }}
+          git push origin ${{ env.TARGET_BRANCH }} --force-with-lease
