--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Necesario para acceder al historial completo
 
       # 2. Generar las imágenes de la serpiente
       - name: Generate Snake Images
@@ -30,23 +30,20 @@ jobs:
           github_user_name: ${{ env.GITHUB_USER }}
           outputs: |
             ./github-snake.svg
-            ./github-snake-dark.svg?palette=github-dark&color_snake=#DC0000 
+            ./github-snake-dark.svg?palette=github-dark
             ./snake.gif?color_snake=orange
 
-      # 3. Commit y push de cambios
+      # 3. Commit y push de cambios (solo si hay cambios reales)
       - name: Commit and Push Changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
           git add *.svg *.gif
-          
-          # Verificar si hay cambios reales
           if git diff --cached --quiet; then
             echo "No hay cambios nuevos para commitear."
             exit 0
           fi
 
-          # Hacer commit y push forzado (seguro en este contexto)
           git commit -m "chore: update snake contribution [skip ci]"
-          git push origin HEAD:${{ env.TARGET_BRANCH }} --force
+          git push origin ${{ env.TARGET_BRANCH }}
