--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           github_user_name: ${{ env.GITHUB_USER }}
           outputs: |
             ./github-snake.svg
-            ./github-snake-dark.svg?palette=github-dark
+            ./github-snake-dark.svg?palette=github-dark&color_snake=#DC0000 
             ./snake.gif?color_snake=orange
 
       # 3. Commit y push de cambios (solo si hay cambios reales)
@@ -46,4 +46,4 @@ jobs:
           fi
 
           git commit -m "chore: update snake contribution [skip ci]"
-          git push origin ${{ env.TARGET_BRANCH }}
+          git push origin main --force
